fix bug calling showing api with ticket id not showing id

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,15 @@ img {
   height: auto;
 }
 
+html,
+body {
+  height: 100vh;
+}
+
+#root,
+.app {
+  min-height: 100vh;
+}
 
 
 /*=============================================
@@ -190,6 +199,17 @@ footer .footer--desc {
 
 footer a.footer--link {
   color: var(--orange)
+}
+
+/* Stick footer to bottom */
+/* https://stackoverflow.com/questions/643879/css-to-make-html-page-footer-stay-at-bottom-of-the-page-with-a-minimum-height-b */
+.app {
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
 }
 
 
